# sfGameMenu

./: .clang-format  .gitignore  CMakeLists.txt
examples/: sample_menu.cpp
public/game_menu/: game_menu.h
src/: game_menu_impl.cpp  game_menu_impl.h
